fix(bcd): trim timeline at top/bottom on mobile

--- a/client/src/document/ingredients/browser-compatibility-table/index.scss
+++ b/client/src/document/ingredients/browser-compatibility-table/index.scss
@@ -259,9 +259,17 @@
 dl.bc-notes-list {
   dt.bc-supports {
     margin-top: 1rem;
+
+    &:first-child {
+      margin-top: 0rem;
+    }
   }
   dd.bc-supports-dd {
     margin-bottom: 1rem;
+
+    &:last-child {
+      margin-bottom: 0rem;
+    }
   }
 }
 
